--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "files.associations": {
         "*html": "html",
         "intrinsic.h": "c",
-        "fixed_point.h": "c"
+        "fixed_point.h": "c",
+        "interrupt.h": "c"
     }
 }
