--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,8 @@
         "*html": "html",
         "intrinsic.h": "c",
         "fixed_point.h": "c",
-        "interrupt.h": "c"
+        "interrupt.h": "c",
+        "vm.h": "c",
+        "file.h": "c"
     }
 }
