--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -24,6 +24,11 @@
         "syscall-nr.h": "c",
         "stdint.h": "c",
         "interrupt.h": "c",
-        "xutility": "c"
+        "xutility": "c",
+        "hash.h": "c",
+        "list.h": "c",
+        "debug.h": "c",
+        "vm.h": "c",
+        "malloc.h": "c"
     }
 }
