test FAIL : page-merge-par, page-merge-stk, page-merge-mm, mmap-exit, swap-file, swap-anon, swap-iter, swap-fork, syn-read, syn-write, cow-simple

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -31,6 +31,9 @@
         "vm.h": "c",
         "malloc.h": "c",
         "uninit.h": "c",
-        "inspect.h": "c"
+        "inspect.h": "c",
+        "disk.h": "c",
+        "loader.h": "c",
+        "bitmap.h": "c"
     }
 }
