--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -34,6 +34,7 @@
         "inspect.h": "c",
         "disk.h": "c",
         "loader.h": "c",
-        "bitmap.h": "c"
+        "bitmap.h": "c",
+        "fsutil.h": "c"
     }
 }
