--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -35,6 +35,8 @@
         "disk.h": "c",
         "loader.h": "c",
         "bitmap.h": "c",
-        "fsutil.h": "c"
+        "fsutil.h": "c",
+        "inode.h": "c",
+        "round.h": "c"
     }
 }
